// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct value should be verified 1`] = `
Array [
  Object {
    "id": "URL",
    "kind": "url",
    "properties": Object {},
    "title": "url.test",
    "value": "https://www.google.com",
  },
]
`;

exports[`undefined value should be verified if not required 1`] = `
Array [
  Object {
    "id": "URL",
    "kind": "url",
    "properties": Object {},
    "title": "url.test",
    "value": "",
  },
]
`;
